--- a/src-renderer/app.css
+++ b/src-renderer/app.css
@@ -1,4 +1,8 @@
 @import "tailwindcss";
+@import "leaflet/dist/leaflet.css";
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark, sunset, black;
+}
 
 :root {
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
